# Sentinel

./: .env.example  .gitignore  README.md  config.json  package-lock.json
backend/: main.py
backend/app/api/: router.py
backend/app/services/: manager.py  memory.py
core/: main.py  manager.py  vector_db.py
desktop/: package-lock.json  package.json
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
desktop/src/components/: Sidebar.css  Sidebar.tsx
docs/vision/: detailed_features.md  perfiles_y_monetizacion.md  roadmap.md
docs/workflows/: firstRun.md  installation.md  projectWorkflow.md
